--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,10 @@ body {
     Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: var(--body-l-lh);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  accent-color: var(--primary);
 }
 
 img {
@@ -70,4 +74,13 @@ ul {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+::selection {
+  background: color-mix(in srgb, var(--primary) 18%, var(--white));
+  color: var(--black);
+}
+
+a {
+  color: inherit;
 }
